Not sure what is new

--- a/P0/res/values/strings.xml
+++ b/P0/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title">Task</string>
     <string name="category">Category</string>
     <string name="add">Add Task</string>
+    <string name="catSelect">Pick a Category</string>
     
     
 </resources>
